allow user to select skills and add custom skill

--- a/job-portal/src/assets/i18n/en.json
+++ b/job-portal/src/assets/i18n/en.json
@@ -5,6 +5,8 @@
     "email": "Email",
     "mobile": "Mobile",
     "linkedin": "Linkedin",
+    "skills": "Skills",
+    "otherSkill": "Other Skill",
     "action":{
         "submit": "Submit"
     },
